# learn_qt

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
qml/: Main.qml  qml.qrc
qml/components/: AppHeader.qml  SectionPanel.qml  StatCard.qml
qml/data/: MockData.js
src/: main.cpp
tests/: test_smoke.cpp
